@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-03-06T00:37:49Z",
-  "count_outdated" : 1243,
-  "uniques_outdated" : 765,
-  "count" : 1260,
-  "uniques" : 782,
+  "timestamp" : "2025-03-07T00:38:02Z",
+  "count_outdated" : 1245,
+  "uniques_outdated" : 767,
+  "count" : 1263,
+  "uniques" : 785,
   "clones" : [
-    {
-      "timestamp": "2025-02-20T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2025-02-21T00:00:00Z",
       "count": 2,
@@ -112,6 +103,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-03-06T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "count_decinc": [ 0, 3 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
