@@ -1,12 +1,7 @@
 {
-  "count": 17,
-  "uniques": 7,
+  "count": 18,
+  "uniques": 8,
   "clones": [
-    {
-      "timestamp": "2025-02-20T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2025-02-21T00:00:00Z",
       "count": 2,
@@ -61,6 +56,11 @@
       "timestamp": "2025-03-05T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2025-03-06T00:00:00Z",
+      "count": 3,
+      "uniques": 3
     }
   ]
 }
